# crowdfactor

./: .env  .gitignore  Dockerfile  __next_data__.json  data.json  docker-compose.yml  fly.sh  fly.toml  main.py  pyproject.toml  readme.md  scp.sh  seed.py  server.py  start.sh  thelocal.db  train.py  worker.py
.github/workflows/: test.yaml
lib/: app.py  cache.py  camera.py  config.py  db.py  forecast.py  graph.py  migration.py  ml.py  seed.py  train.py  utils.py  worker.py
lib/templates/: index.html
migrations/: 1.sql  2.sql  3.sql  4.sql  5.sql
scripts/: seed.py
tests/: conftest.py  test_cache.py  test_db.py  test_migrations.py  test_ml.py  test_server.py  test_utils.py
tests/data/: rating-590927576a2e4300134fbed8.json  spot-info-590927576a2e4300134fbed8.json  tides-590927576a2e4300134fbed8.json  training-data.csv  wave-590927576a2e4300134fbed8.json  weather-590927576a2e4300134fbed8.json  wind-590927576a2e4300134fbed8.json
tests/data/migration-fail/: 1.sql  2.sql
tests/data/migrations/: 1.sql  2.sql
