[tool.poetry]
name = "thelocal"
version = "0.1.0"
description = "Uses a surfline video stream to improve surf spot timing"
authors = ["Craig Mulligan <git@craigmulligan.com>"]

[tool.poetry.dependencies]
python = "^3.10"
youtube_dl = "^2021.12.17"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
