[tool.poetry]
name = "thelocal"
version = "0.1.0"
description = "Uses a surfline video stream to improve surf spot timing"
authors = ["Craig Mulligan <git@craigmulligan.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
ffmpeg-python = "^0.2.0"
torch = "^1.13.0"
av = "^10.0.0"
roboflow = "^0.2.18"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
