[tool.poetry]
name = "crowdfactor"
version = "0.1.0"
description = "Uses a surfline video stream to improve surf spot timing"
authors = ["Craig Mulligan <git@craigmulligan.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
ffmpeg-python = "^0.2.0"
roboflow = "^0.2.18"
Flask = "^2.2.2"
pygal = "^3.0.0"
gunicorn = "^20.1.0"
requests-mock = "^1.10.0"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
